added two new project and updated Tailwin2

--- a/Tailwind2/public/index.html
+++ b/Tailwind2/public/index.html
@@ -533,9 +533,10 @@
                             convenience.
                         </p>
 
-                        <span class="absolute px-2 eko  bottom-4 w-full">
+                        <span class="absolute px-2 eko  bottom-4  w-full">
                             <p class="text-white boxtext">
-                                Eko Gardens</p>
+                                Eko Gardens
+                            </p>
                             <p class="bg-headerBtnText h-[1px] horizon  w-full"></p>
                         </span>
 
@@ -553,7 +554,7 @@
                                     </span>
                                 </span>
                             </a>
-                            <a href="#" class="alinks relative">
+                            <a href="#" class="alinks relative ">
                                 <span class="texttt">View More</span>
                                 <span class="house ">
                                     <span class="clr">
@@ -1113,18 +1114,119 @@
             </div>
         </div>
     </div>
-
-
-
-
-
-
-
-
-    </div>
     <!-- Banner7 Done -->
     <!-- *************************************** -->
 
+
+
+    <!-- Banner8 -->
+    <div class="banner6 bg-header w-full px-5 md:px-0 pt-8 pb-14">
+
+        <div class="pchild flex flex-col justify-center items-center gap-6 py-3 md:py-9 ">
+
+            <div class="flex welcome text-[32px] w-full md:text-[42px] justify-center items-center ">
+                <p class="text-darkText "><span class="text-headerBtnText ">Our</span> Gallery</p>
+            </div>
+
+            <span class="flex flex-col w-full justify-center gap-[3px] items-center">
+                <hr class="w-[50px]  h-[2px] font-thin  bg-headerBtnText">
+                <hr class="w-[200px]  h-[2px] font-thin   bg-headerBtnText">
+                <hr class="w-[50px]  h-[2px] font-thin  bg-headerBtnText">
+            </span>
+
+        </div>
+
+        <div class="px-0 md:px-3 py-3 md:py-0 ">
+            <div class="container pt-0 pb-8  w-full ">
+                <div class="slider_wrapper overflow-hidden relative w-full flex justify-center items-center">
+
+                    <div class="slides w-full flex gap-0 md:gap-2 overflow-hidden  transition-transform duration-500 ease-in-out">
+                        <!-- Two slides per view -->
+                        <div class="slideA bg-[url(./images/gallery_img1.jpg)] bg-center bg-cover">
+                            <div class="slideB ">
+                                <span class="alidsp"><i class="fa-solid fa-plus"></i></span>
+                            </div>
+                        </div>
+                        <!--  -->
+                        <div class="slideA bg-[url(./images/gallery_img2.jpg)] bg-center bg-cover  ">
+                            <div class="slideB  ">
+                                <span class="alidsp"><i class="fa-solid fa-plus"></i></span>
+                            </div>
+                        </div>
+                        <!--  -->
+                        <div class="slideA bg-[url(./images/gallery_img3.jpg)] bg-center bg-cover ">
+                            <div class="slideB ">
+                                <span class="alidsp"><i class="fa-solid fa-plus"></i></span>
+                            </div>
+                        </div>
+                        <!--  -->
+                        <div class="slideA bg-[url(./images/gallery_img4.jpg)] bg-center bg-cover ">
+                            <div class="slideB ">
+                                <span class="alidsp"><i class="fa-solid fa-plus"></i></span>
+                            </div>
+                        </div>
+                        <!--  -->
+                        <div class="slideA bg-[url(./images/gallery_img5.jpg)] bg-center bg-cover ">
+                            <div class="slideB">
+                                <span class="alidsp"><i class="fa-solid fa-plus"></i></span>
+                            </div>
+                        </div>
+                        <div class="slideA bg-[url(./images/gallery_img6.jpg)] bg-center bg-cover">
+                            <div class="slideB ">
+                                <span class="alidsp"><i class="fa-solid fa-plus"></i></span>
+                            </div>
+                        </div>
+
+                        <!--  -->
+                        <div class="slideA bg-[url(./images/gallery_img7.jpg)] bg-center bg-cover">
+                            <div class="slideB">
+                                <span class="alidsp"><i class="fa-solid fa-plus"></i></span>
+                            </div>
+                        </div>
+                        <!--  -->
+                        <div class="slideA bg-[url(./images/gallery_img8.jpg)] bg-center bg-cover">
+                            <div class="slideB">
+                                <span class="alidsp"><i class="fa-solid fa-plus"></i></span>
+                            </div>
+                        </div>
+                        <!--  -->
+                        <div class="slideA bg-[url(./images/gallery_img9.jpg)] bg-center bg-cover">
+                            <div class="slideB">
+                                <span class="alidsp"><i class="fa-solid fa-plus"></i></span>
+                            </div>
+                        </div>
+                        <!--  -->
+                        <div class="slideA bg-[url(./images/gallery_img10.jpg)] bg-center bg-cover">
+                            <div class="slideB">
+                                <span class="alidsp"><i class="fa-solid fa-plus"></i></span>
+                            </div>
+                        </div>
+
+                        <div class="slideA bg-[url(./images/gallery_img11.jpg)] bg-center bg-cover">
+                            <div class="slideB">
+                                <span class="alidsp"><i class="fa-solid fa-plus"></i></span>
+                            </div>
+                        </div>
+                        <div class="slideA bg-[url(./images/gallery_img12.jpg)] bg-center bg-cover">
+                            <div class="slideB">
+                                <span class="alidsp"><i class="fa-solid fa-plus"></i></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Dots for navigation
+                <div class="dots flex justify-center mt-4 md:mt-8 space-x-2">
+                    <div class=" dotParent pt-2 flex justify-center gap-2">
+                        <button class="dot w-[10px] h-[10px] bg-gray-300 rounded-full" data-slide="0"></button>
+                        <button class="dot w-[10px] h-[10px] bg-gray-300 rounded-full" data-slide="1"></button>
+                        <button class="dot w-[10px] h-[10px] bg-gray-300 rounded-full" data-slide="2"></button>
+                    </div>
+                </div> -->
+            </div>
+
+        </div>
+    </div>
 
 
 
