--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
         <a href="./FormValidation/index.html" target="_blank">
             <h1>Form Validation</h1>
         </a>
+        <a href="./BookAuthor/index.html" target="_blank">
+            <h1>Form Validation</h1>
+        </a>
 
 
     </div>
