worked on modal class and buttom carousel

--- a/Tailwind2/public/index.html
+++ b/Tailwind2/public/index.html
@@ -23,20 +23,28 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
 </head>
 
-<body class="relative">
-    <div class="bg-transxlS hidden  z-50 absolute w-full h-full top-0 left-0 ">
-        <div class="absolute top-[89%] left-[25%]  w-[54%]  h-[431px] ">
-            <div class="w-full h-[94%]  bg-[url(./images/gallery_img11.jpg)] bman bg-center bg-cover ">
+<body class="relative bodyy">
+    <div class="bg-transxlS hidden z-20 badge absolute w-full h-full top-0 left-0 transition-all ease-in-out duration-700 ">
+        <div class="absolute top-[88%] z-50 left-[25%] gallery  w-[50%]  h-[455px] ">
+            <div
+                class="w-full h-[94%]  flex justify-between  transition-all ease-in-out duration-700   bg-[url(./images/gallery_img11.jpg)] bman bg-center bg-cover ">
+                <span class="arrowss z-50 relative  arrLeftt cursor-pointer w-1/2 h-full ">
+                    <i class="fa-solid fa-chevron-left point text-[50px] absolute  top-1/2 left-[23px]"></i>
+                </span>
+
+                <span class="arrowss relative z-50 arrRightt cursor-pointer w-1/2 h-full">
+                    <i class="fa-solid fa-chevron-right point text-[50px]  absolute top-1/2    right-[23px]"></i>
+                </span>
 
             </div>
 
             <div class="px-2 flex justify-between w-full">
                 <div>
                     <p class="text-white font-bold">Your Caption</p>
-                    <p class="text-bla text-[12px]">image 1 of 1</p>
+                    <p class="text-bla text-[12px] picsUpdates"></p>
                 </div>
 
-                <span class="text-bla hover:text-white text-[25px] font-bold transition ease-in-out duration-700">
+                <span class="text-bla outt hover:text-white text-[25px] font-bold transition ease-in-out duration-700">
                     <i class="fa-solid fa-x"></i>
                 </span>
 
@@ -1021,7 +1029,7 @@
                 </div>
                 <!--  -->
                 <div class="hidden md:block w-[24%]">
-                    <div class=" w-full  h-[510px] flex justify-center items-center  Aflextchi  ">
+                    <div class=" w-full bg-blue-300 h-[510px] flex justify-center items-center  Aflextchi  ">
                         <p class="bigText -rotate-90 px-1 text-center text-headerBtnText uppercase">
                             Dining
                         </p>
@@ -1141,7 +1149,7 @@
 
 
     <!-- Banner8 -->
-    <div class="banner8 bg-header w-full px-5 md:px-0 pt-8 pb-14">
+    <div class="banner8 bg-header w-full flex justify-center flex-col  pt-8 pb-14">
 
 
 
@@ -1159,131 +1167,131 @@
 
         </div>
 
-        <div class="px-0 md:px-3 py-3 md:py-0 ">
-            <div class="container  pt-0 pb-8  w-full">
+        <div class=" px-0 w-full md:px-[1rem] py-3  oyao md:py-0 ">
 
-                <div class="slider_wrapper overflow-hidden relative w-full flex justify-center items-center">
 
-                    <div
-                        class="slides w-full flex gap-0 md:gap-3 overflow-hidden  transition-transform duration-500 ease-in-out">
-                        <!-- Two slides per view -->
-                        <div class="slideA bg-[url(./images/gallery_img1.jpg)] bg-center bg-cover">
-                            <div class="slideB ">
-                                <span class="alidsp"><i class="fa-solid fa-plus"></i></span>
-                            </div>
-                        </div>
-                        <!--  -->
-                        <div class="slideA bg-[url(./images/gallery_img2.jpg)] bg-center bg-cover  ">
-                            <div class="slideB  ">
-                                <span class="alidsp"><i class="fa-solid fa-plus"></i></span>
-                            </div>
-                        </div>
-                        <!--  -->
-                        <div class="slideA bg-[url(./images/gallery_img3.jpg)] bg-center bg-cover ">
-                            <div class="slideB ">
-                                <span class="alidsp"><i class="fa-solid fa-plus"></i></span>
-                            </div>
-                        </div>
-                        <!--  -->
-                        <div class="slideA bg-[url(./images/gallery_img4.jpg)] bg-center bg-cover ">
-                            <div class="slideB ">
-                                <span class="alidsp"><i class="fa-solid fa-plus"></i></span>
-                            </div>
-                        </div>
-                        <!--  -->
-                        <div class="slideA bg-[url(./images/gallery_img5.jpg)] bg-center bg-cover ">
-                            <div class="slideB">
-                                <span class="alidsp"><i class="fa-solid fa-plus"></i></span>
-                            </div>
-                        </div>
-                        <div class="slideA bg-[url(./images/gallery_img6.jpg)] bg-center bg-cover">
-                            <div class="slideB ">
-                                <span class="alidsp"><i class="fa-solid fa-plus"></i></span>
-                            </div>
-                        </div>
 
-                        <!--  -->
-                        <div class="slideA bg-[url(./images/gallery_img7.jpg)] bg-center bg-cover">
-                            <div class="slideB">
-                                <span class="alidsp"><i class="fa-solid fa-plus"></i></span>
-                            </div>
-                        </div>
-                        <!--  -->
-                        <div class="slideA bg-[url(./images/gallery_img8.jpg)] bg-center bg-cover">
-                            <div class="slideB">
-                                <span class="alidsp"><i class="fa-solid fa-plus"></i></span>
-                            </div>
-                        </div>
-                        <!--  -->
-                        <div class="slideA bg-[url(./images/gallery_img9.jpg)] bg-center bg-cover">
-                            <div class="slideB">
-                                <span class="alidsp"><i class="fa-solid fa-plus"></i></span>
-                            </div>
-                        </div>
-                        <!--  -->
-                        <div class="slideA bg-[url(./images/gallery_img10.jpg)] bg-center bg-cover">
-                            <div class="slideB">
-                                <span class="alidsp"><i class="fa-solid fa-plus"></i></span>
-                            </div>
-                        </div>
+            <div class="slider_wrapper overflow-hidden    relative w-full flex justify-center items-center">
 
-                        <div class="slideA bg-[url(./images/gallery_img11.jpg)] bg-center bg-cover">
-                            <div class="slideB">
-                                <span class="alidsp"><i class="fa-solid fa-plus"></i></span>
-                            </div>
+                <div class="slider w-full flex gap-0 md:gap-[13px]  transition-transform  ease-in-out duration-[.9s]">
+                    <!-- Two slides per view -->
+                    <div class="slideA bg-[url(./images/gallery_img1.jpg)] bg-center bg-cover">
+                        <div class="slideB ">
+                            <span class="alidsp"><i class="fa-solid fa-plus"></i></span>
                         </div>
-                        <div class="slideA bg-[url(./images/gallery_img12.jpg)] bg-center bg-cover">
-                            <div class="slideB">
-                                <span class="alidsp"><i class="fa-solid fa-plus"></i></span>
-                            </div>
+                    </div>
+
+                    <div class="slideA bg-[url(./images/gallery_img2.jpg)] bg-center bg-cover  ">
+                        <div class="slideB  ">
+                            <span class="alidsp"><i class="fa-solid fa-plus"></i></span>
+                        </div>
+                    </div>
+
+                    <div class="slideA bg-[url(./images/gallery_img3.jpg)] bg-center bg-cover ">
+                        <div class="slideB ">
+                            <span class="alidsp"><i class="fa-solid fa-plus"></i></span>
+                        </div>
+                    </div>
+
+                    <div class="slideA bg-[url(./images/gallery_img4.jpg)] bg-center bg-cover ">
+                        <div class="slideB ">
+                            <span class="alidsp"><i class="fa-solid fa-plus"></i></span>
+                        </div>
+                    </div>
+
+                    <div class="slideA bg-[url(./images/gallery_img5.jpg)] bg-center bg-cover ">
+                        <div class="slideB">
+                            <span class="alidsp"><i class="fa-solid fa-plus"></i></span>
+                        </div>
+                    </div>
+                    <div class="slideA bg-[url(./images/gallery_img6.jpg)] bg-center bg-cover">
+                        <div class="slideB ">
+                            <span class="alidsp"><i class="fa-solid fa-plus"></i></span>
+                        </div>
+                    </div>
+
+
+                    <div class="slideA bg-[url(./images/gallery_img7.jpg)] bg-center bg-cover">
+                        <div class="slideB">
+                            <span class="alidsp"><i class="fa-solid fa-plus"></i></span>
+                        </div>
+                    </div>
+
+                    <div class="slideA bg-[url(./images/gallery_img8.jpg)] bg-center bg-cover">
+                        <div class="slideB">
+                            <span class="alidsp"><i class="fa-solid fa-plus"></i></span>
+                        </div>
+                    </div>
+
+                    <div class="slideA bg-[url(./images/gallery_img9.jpg)] bg-center bg-cover">
+                        <div class="slideB">
+                            <span class="alidsp"><i class="fa-solid fa-plus"></i></span>
+                        </div>
+                    </div>
+
+                    <div class="slideA bg-[url(./images/gallery_img10.jpg)] bg-center bg-cover">
+                        <div class="slideB">
+                            <span class="alidsp"><i class="fa-solid fa-plus"></i></span>
+                        </div>
+                    </div>
+
+                    <div class="slideA bg-[url(./images/gallery_img11.jpg)] bg-center bg-cover">
+                        <div class="slideB">
+                            <span class="alidsp"><i class="fa-solid fa-plus"></i></span>
+                        </div>
+                    </div>
+                    <div class="slideA bg-[url(./images/gallery_img12.jpg)] bg-center bg-cover">
+                        <div class="slideB">
+                            <span class="alidsp"><i class="fa-solid fa-plus"></i></span>
                         </div>
                     </div>
                 </div>
+            </div>
 
-                <!-- Dots for navigation -->
 
 
-                <div class="dotsB flex justify-center mt-4 md:mt-8 space-x-2 w-full ">
-                    <div class=" dotParentB relative left-4  pt-2 flex justify-center gap-3 ">
-                        <span class="nexttt">
+            <!-- Dots for navigation -->
+
+
+            <div class=" flex flex-col justify-center items-center">
+                <div class="dotsB flex justify-center mt-4 md:mt-8 px-[1rem]  w-full ">
+                    <div class=" dotParentB relative   pt-2 flex justify-center gap-[12px] ">
+                        <span class="nexttt nextLeft">
                             Prev
                         </span>
-                        <span class="nexttt">
+                        <span class="nexttt nextRight">
                             Next
                         </span>
                     </div>
                 </div>
                 <div class="dotsB flex justify-center mt-4 md:mt-8 space-x-2 w-full ">
-                    <div class=" dotParentB relative left-4  pt-2 flex justify-center gap-2 ">
-                        <button class="dotB w-[10px] h-[10px] bg-bla rounded-full" data-slide="0"></button>
-                        <button class="dotB w-[10px] h-[10px] bg-NaDot rounded-full" data-slide="1"></button>
-                        <button class="dotB w-[10px] h-[10px] bg-NaDot rounded-full" data-slide="2"></button>
+                    <div class=" dotParentBB relative   pt-2 flex justify-center gap-[12px] ">
+                        <button class="dotB  bg-NaDot" data-slide="0"></button>
+                        <button class="dotB  bg-NaDot " data-slide="1"></button>
+                        <button class="dotB  bg-NaDot " data-slide="2"></button>
                     </div>
                 </div>
             </div>
 
+
         </div>
-    </div>
 
 
 
 
 
 
-
-
-
-    <div class="flex text-5xl  mt-5 justify-center items-center bg-slate-500">
-        <h1 class="text-5xl text-center ">Moore de come. Make i rest small abeg🥱</h1>
-    </div>
-    <br>
-    <br>
-    <br>
+        <div class="flex text-5xl  mt-5 justify-center items-center bg-slate-500">
+            <h1 class="text-5xl text-center ">Moore de come. Make i rest small abeg🥱</h1>
+        </div>
+        <br>
+        <br>
+        <br>
 
 
 
 
-    <script src="index.js"></script>
+        <script src="index.js"></script>
 </body>
 
 </html>
