adding contact and map section

--- a/Tailwind2/public/index.html
+++ b/Tailwind2/public/index.html
@@ -24,7 +24,8 @@
 </head>
 
 <body class="relative bodyy">
-    <div class="bg-transxlS hidden z-20 badge absolute w-full h-full top-0 left-0 transition-all ease-in-out duration-700 ">
+    <div
+        class="bg-transxlS hidden z-20 badge absolute w-full h-full top-0 left-0 transition-all ease-in-out duration-700 ">
         <div class="absolute top-[88%] z-50 left-[25%] gallery  w-[50%]  h-[455px] ">
             <div
                 class="w-full h-[94%]  flex justify-between  transition-all ease-in-out duration-700   bg-[url(./images/gallery_img11.jpg)] bman bg-center bg-cover ">
@@ -1149,11 +1150,8 @@
 
 
     <!-- Banner8 -->
-    <div class="banner8 bg-header w-full flex justify-center flex-col  pt-8 pb-14">
-
-
-
-        <div class="pchild flex flex-col justify-center items-center gap-6 py-3 md:py-9 ">
+    <div class="banner8 w-full flex justify-center flex-col py-3  md:py-20  bg-header">
+        <div class="pchild flex flex-col justify-center items-center gap-6 py-8 ">
 
             <div class="flex welcome text-[32px] w-full md:text-[42px] justify-center items-center ">
                 <p class="text-darkText "><span class="text-headerBtnText ">Our</span> Gallery</p>
@@ -1254,8 +1252,8 @@
 
 
             <div class=" flex flex-col justify-center items-center">
-                <div class="dotsB flex justify-center mt-4 md:mt-8 px-[1rem]  w-full ">
-                    <div class=" dotParentB relative   pt-2 flex justify-center gap-[12px] ">
+                <div class="dotsB flex justify-center mt-4 md:mt-2 px-[1rem]  w-full ">
+                    <div class=" dotParentB relative    pt-2 flex justify-center gap-[12px] ">
                         <span class="nexttt nextLeft">
                             Prev
                         </span>
@@ -1264,8 +1262,8 @@
                         </span>
                     </div>
                 </div>
-                <div class="dotsB flex justify-center mt-4 md:mt-8 space-x-2 w-full ">
-                    <div class=" dotParentBB relative   pt-2 flex justify-center gap-[12px] ">
+                <div class="dotsB flex justify-center  mt-4 md:mt-2 space-x-2 w-full ">
+                    <div class=" dotParentBB relative    flex justify-center gap-[12px] ">
                         <button class="dotB  bg-NaDot" data-slide="0"></button>
                         <button class="dotB  bg-NaDot " data-slide="1"></button>
                         <button class="dotB  bg-NaDot " data-slide="2"></button>
@@ -1275,23 +1273,76 @@
 
 
         </div>
+        <!-- ******************Banner8 Done****************** -->
+    </div>
 
+    <!-- Banner 9 -->
+    <div class="bg-banner9 py-5">
+        <div class="pchild flex flex-col justify-center items-center gap-6 py-3 md:py-[1.8rem] ">
 
+            <div class="flex welcome text-[32px] w-full md:text-[42px] justify-center items-center ">
+                <p class="text-darkText "><span class="text-headerBtnText ">Our</span> Gallery</p>
+            </div>
 
+            <span class="flex flex-col w-full justify-center gap-[3px] items-center">
+                <hr class="w-[50px]  h-[2px] font-thin  bg-headerBtnText">
+                <hr class="w-[200px]  h-[2px] font-thin   bg-headerBtnText">
+                <hr class="w-[50px]  h-[2px] font-thin  bg-headerBtnText">
+            </span>
 
-
-
-        <div class="flex text-5xl  mt-5 justify-center items-center bg-slate-500">
-            <h1 class="text-5xl text-center ">Moore de come. Make i rest small abeg🥱</h1>
         </div>
-        <br>
-        <br>
-        <br>
+
+        <div class="relative px-12">
+            <div class="h-[450px] w-full bg-yellow-200">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d31711.116448527788!2d3.2899194!3d6.535629999999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sng!4v1726218912451!5m2!1sen!2sng"
+                    style="border:0;" allowfullscreen="" loading="lazy" class="frame w-full h-full"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+            <div class="flex flex-col md:flex-row justify-center item-center">
+
+
+                <div class="mapb amap w-[45%] h-[762px] bg-red-400 px-4">
+
+                </div>
+                <div class="mapb bmap w-[55%]  bg-blue-400 p-8">
+                    <form class="bg-header h-[524px] w-full p-10 ">
+                        <p class="uppercase">Get in touch</p>
+
+                        <div class="flex flex-col gap-5 mt-14  ">
+                            <div>
+                                <input class="collect h-[38px]" type="text" name="" placeholder="Enter your email adress" id="">
+                            </div>
+                            <div>
+                                <input class="collect h-[38px]" type="text" name="" placeholder="Enter your email name" id="">
+                            </div>
+                            <div>
+                                <textarea class="collect h-[116px]" name="" placeholder="Enter your email message" id=""></textarea>
+                            </div>
+                        </div>
+                       <div class="flex mt-4 gap-4 flex-col">
+                        <p>* All fields are mandatory.</p>
+                        <span class=" w-36 flex justify-center items-center p-2 h-8 bg-headerBtnText text-white  text-center">Send Message</span>
+                       </div>
+                    </form>
+                </div>
+
+            </div>
+        </div>
+
+    </div>
+
+    <div class="flex text-5xl  mt-5 justify-center items-center bg-slate-500">
+        <h1 class="text-5xl text-center ">Moore de come. Make i rest small abeg🥱</h1>
+    </div>
+    <br>
+    <br>
+    <br>
 
 
 
 
-        <script src="index.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
